--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.15.6",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/material-top-tabs": "^5.3.15",
     "@react-navigation/native": "^5.9.4",
     "expo": "~42.0.1",
+    "expo-notifications": "~0.12.3",
     "expo-status-bar": "~1.0.4",
     "nachos-ui": "^0.2.0-beta.1",
     "react": "16.13.1",
@@ -24,8 +26,7 @@
     "react-native-screens": "~3.4.0",
     "react-native-svg": "^12.1.1",
     "react-native-tab-view": "^2.16.0",
-    "react-native-web": "~0.13.12",
-    "expo-notifications": "~0.12.3"
+    "react-native-web": "~0.13.12"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
