--- a/package.json
+++ b/package.json
@@ -13,20 +13,25 @@
     "@react-navigation/material-top-tabs": "^5.3.15",
     "@react-navigation/native": "^5.9.4",
     "expo": "~42.0.1",
+    "expo-ads-admob": "~10.1.2",
     "expo-notifications": "~0.12.3",
     "expo-status-bar": "~1.0.4",
     "nachos-ui": "^0.2.0-beta.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native-animatable": "^1.3.3",
     "react-native-chart-kit": "^6.11.0",
     "react-native-gesture-handler": "~1.10.2",
+    "react-native-motion": "^1.0.5",
+    "react-native-popup-menu": "^0.15.11",
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
     "react-native-svg": "^12.1.1",
     "react-native-tab-view": "^2.16.0",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "rnal": "^0.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
